<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_formula"
            android:icon="@drawable/ic_formula"
            android:title="@string/nav_formula" />
        <item
            android:id="@+id/nav_theory"
            android:icon="@drawable/ic_2"
            android:title="@string/nav_theory" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/nav_practice" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_empty"
            android:title="@string/nav_favorite" />
    </group>
    <item android:title="Дополнительно">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_outline_sentiment_very_satisfied_24"
                android:title="@string/nav_rate"/>
            <item
                android:id="@+id/nav_error"
                android:icon="@drawable/ic_mail"
                android:title="@string/nav_error" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/nav_settings"/>
        </menu>
    </item>
</menu>